# traffic-green-predictor

./: README.md  pyproject.toml
data/: .~lock.4505_k1.csv#  .~lock.8705_k2.csv#  4505_k1.csv  4505_k3.csv  8705_k2.csv  8705_k4.csv
models/: model_K1.pth  model_K2.pth  model_K3.pth  model_K4.pth
src/traffic_green_predictor/: dataset.py  model.py  predict.py  train.py
